--- a/tnuniv/src/index.html
+++ b/tnuniv/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Tnuniv</title>
     <base href="/">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
