--- a/tnuniv/src/index.html
+++ b/tnuniv/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Tnuniv</title>
-    <base href="https://tnunivers.netlify.com">
+    <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=11">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/img/logo.png">
